--- a/test/simple.html
+++ b/test/simple.html
@@ -2,11 +2,11 @@
 <head>
     <meta charset="utf-8">
     <title>Plain old tests</title>
-    <script src="../iban.js"></script>
 </head>
 <body>
     <pre></pre>
-    <script>
+    <script type="module">
+        import * as IBAN from "../iban.js";
         var pre = document.getElementsByTagName('pre')[0];
         pre.innerHTML += "Correctly detect invalid IBAN: " + (IBAN.isValid('hello world') == false) + "\n";
         pre.innerHTML += "Correctly detect valid IBAN: " + (IBAN.isValid('BE68539007547034') == true) + "\n";
