updated the GitHub project link on demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -45,7 +45,7 @@
           <span class="navbar-brand">IBAN.js demo</span>
         </section>
         <section class="navbar-section">
-          <a class="btn btn-link" href="https://github.com/arhs/iban/">GitHub</a>
+          <a class="btn btn-link" href="https://github.com/arhs/iban.js/">GitHub</a>
           <a class="btn btn-link" href="https://www.arhs-group.com">About Arhs</a>
         </section>
       </header>
